# edgework-sdk

./: .gitattributes  .gitignore  ADVANCED_FEATURES.md  AEON_FOUNDATION_SCAFFOLD_SPEC.md  AGENT_KIT_SUMMARY.md  ALL_FEATURES_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  QUERY_DEMO.md  README.md  aeon.toml  dts-shims.d.ts  package.json  project.json  tsconfig.build.json  tsconfig.json  tsconfig.typecheck.json  tsup.config.js  tsup.config.ts
cli/: README.md  agent-start.ts  earnings.ts  gateway-start.ts  media.ts  proxy-handler.ts  proxy-login.ts  proxy-start.ts  quality.ts  query.ts  register-aeonpid.ts  setup.ts  status.ts  stop.ts  tokens.ts
cli/__tests__/: media.test.ts  proxy-integration.test.ts  proxy.test.ts
rust/: README.md
rust/wasm-wrapper/: Cargo.toml  README.md
rust/wasm-wrapper/src/: README.md  lib.rs
scripts/: README.md  generate-clients.js  generate-clients.ts
src/: README.md  affectively-api-key.ts  benchmark.ts  edgework-api-key.ts  index.ts  models.ts  schemas.ts  types.ts
src/__tests__/: affectively-api-key.test.ts  deploy-scaffold.test.ts  deploy-smoke.test.ts  deploy-stream.test.ts  integration.test.ts  memory-storage.test.ts  quality-lint.test.ts  reward-model.test.ts  schemas.test.ts  tier1-distributed-integration.test.ts  tier2-embeddings-infrastructure.test.ts  tokenizer.test.ts  wasm-client.test.ts
src/agent/: AffectTokenManager.ts  AgentManager.ts  ComputeNode.ts  GatewayConnector.ts  INTEGRATION.md  QUICK_START.md  README.md  SystemTray.ts  TokenSpendingManager.ts  WalletManager.ts  index.ts  setup.ts  types.ts  (+1 more)
(+261 files in other folders)
